[package]
name = "xkcd"
version = "0.1.0"
authors = ["vedran <vinkovedran@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
image = "0.23.4"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
tokio = { version = "0.2", features = ["full"] }